--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "lucide-react": "^0.516.0",
     "react": "^19.1.0",
+    "react-arborist": "^3.4.3",
     "react-dom": "^19.1.0",
     "uuid": "^11.1.0"
   },
